--- a/nodeServer/package.json
+++ b/nodeServer/package.json
@@ -16,7 +16,8 @@
     "better-sqlite3": "^9.4.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-session": "^1.18.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
