--- a/nodeServer/package.json
+++ b/nodeServer/package.json
@@ -17,7 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
-    "express-session": "^1.18.0"
+    "express-session": "^1.18.0",
+    "nodemailer": "^6.9.10"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
