--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
     "start": "concurrently \"node server.js\" \"cd rydde-app-react && npm start\"",
-    "nei": "node server.js"
+    "build": "cd rydde-app-react && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
